infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth #name of pod
    spec:
      containers:
        - name: auth
          image: afheem/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  type: ClusterIP
  selector: 
    app: auth #find all pods with name auth
  ports:
  - name: auth
    protocol: TCP
    port: 3000
    targetPort: 3000
